Prevent bleed-through

--- a/react/admin/src/AppDark.css
+++ b/react/admin/src/AppDark.css
@@ -1,21 +1,3 @@
-@media (min-width: 900px) and (prefers-color-scheme: dark) {
-  .email_list,
-  .email_list :not(.highlight *,
-                   .active *,
-                   .default *,
-                   .selected *,
-                   .highlight *,
-                   .active *,
-                   .default *,
-                   .selected *,
-                   button,
-                   select,
-                   span.checked,
-                   span.unchecked) {
-    background-color: #181818 !important;
-  }
-}
-
 @media (prefers-color-scheme: dark) {
   body, a, button, select, div, label, form {
     color: #aaa;
@@ -74,6 +56,21 @@
     box-shadow: inset 0 0 0.35em #200;
     background-color: #400;
     border-color: #aaa;
+  }
+  .email_list,
+  .email_list :not(.highlight *,
+                   .active *,
+                   .default *,
+                   .selected *,
+                   .highlight *,
+                   .active *,
+                   .default *,
+                   .selected *,
+                   button,
+                   select,
+                   span.checked,
+                   span.unchecked) {
+    background-color: #181818 !important;
   }
   /* forced */
   .forced * {
